--- a/client/src/pages/styles/Main.scss
+++ b/client/src/pages/styles/Main.scss
@@ -36,16 +36,26 @@ section.blob-box {
     align-items: center;
     //min-height: 10vh;
     //min-width: 10vw;
-    height: 200px;
-    width: 200px;
     padding: 20px;
+    //height: 200px;
+    //width: 200px;
+
+    height: 100%;
+
+
     grid-area: 2 / 1 / 3 / 2;
 }
 
 .blob {
     position: absolute;
-    width: 200px;
-    height: 200px;
+    min-height: 100px;
+
+    height: 100%;
+
+    max-height: 100%;
+    max-width: 100%;
+
+    aspect-ratio: 1/1;
     //transform: translate(-20px, 70px);
 }
 
