--- a/client/src/pages/styles/Main.scss
+++ b/client/src/pages/styles/Main.scss
@@ -47,6 +47,9 @@ section.blob-box {
 
 .blob {
     position: absolute;
+    //width: 200px;
+    //height: 200px;
+    //height: 100%;
     min-height: 100px;
 
     height: 100%;
