minor size movement changes

--- a/client/src/pages/styles/Main.scss
+++ b/client/src/pages/styles/Main.scss
@@ -8,7 +8,7 @@
     //margin-top: 15%;
 
     display: grid;
-    grid-template-rows: 1fr 1fr 2fr;
+    grid-template-rows: 1fr 2.5fr;
     grid-template-columns: 1fr 3fr;
 }
 
