--- a/client/src/pages/styles/Main.scss
+++ b/client/src/pages/styles/Main.scss
@@ -1,3 +1,12 @@
+:root {
+    --main-bg-color: #537D5D;
+    --main-bg-color-2: #73946B;
+    --main-bg-color-3: #9EBC8A;
+    --main-bg-color-4: #D2D0A0;
+    --main-text-color: black;
+    --main-font: 'Poppins', sans-serif;
+}
+
 .MainContent{
     background-color: #7091E6;
     flex: 1;
