made max-width of content to be limited to it doesnt touch the sides of the screen

--- a/client/src/pages/styles/Main.scss
+++ b/client/src/pages/styles/Main.scss
@@ -32,11 +32,13 @@ h1, h2, p {
     font-size: 6em;
     font-weight: 600;
     margin-bottom: 10px;
+    max-width: 90%;
 }
 
 .Description {
     font-size: 2em;
     margin-bottom: 10px;
+    max-width: 90%;
 }
 
 //blob
