--- a/client/src/pages/styles/Main.scss
+++ b/client/src/pages/styles/Main.scss
@@ -128,6 +128,9 @@ section.blob-box {
 
     .ContentText {
         grid-area: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     section.blob-box {
