smaller than phone removes content when too small

--- a/client/src/pages/styles/Main.scss
+++ b/client/src/pages/styles/Main.scss
@@ -143,3 +143,9 @@ section.blob-box {
         text-align: center;
     }
 }
+
+@media screen and (max-width: 320px) {
+    .ContentText {
+        display: none;
+    }
+}
