--- a/client/src/pages/styles/Layout.scss
+++ b/client/src/pages/styles/Layout.scss
@@ -3,32 +3,31 @@ root {
 }
 
 nav {
-  background-color: #333333;
-  //margin-bottom: 15px;
-  border-bottom: 5px black solid;
-}
+  background-color: var(--main-bg-color-2);
+  border-bottom: 5px var(--main-bg-color-3) solid;
 
-nav ul {
-  list-style-type: none;
-  display: flex;
-  justify-content: space-around;
-  padding: 10px 0 10px 0;
-  margin: 0;
-}
+  ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-around;
+    padding: 10px 0 10px 0;
+    margin: 0;
 
-nav ul li {
-  padding: 0 10px 0 10px;
-}
+    li {
+      padding: 0 10px 0 10px;
+    }
+  }
 
-nav a {
-  text-decoration: none;
-  color: #ffffff;
-}
+  a {
+    text-decoration: none;
+    color: var(--main-bg-color-4);
 
-nav a:hover {
-  color: black;
-}
+    &:hover {
+      color: black;
+    }
 
-nav a:active {
-  color: red;
+    &:active {
+      color: black;
+    }
+  }
 }
